--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
     id 'jacoco'
+    id 'war'
+    
 }
 
 repositories {
@@ -42,6 +44,12 @@ test {
 }
 jacocoTestReport.dependsOn(test)
 
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'ProyectoADN',
+                'Implementation-Version': version
+    }
+}
 
 
 
